--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Ore Benson Portfolio"
+    />
     <title>Ore Benson</title>
-    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-      <h2>Welcome to my page</h2>
-   </div>
-    
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
