--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                             <ul>
                                 <li><p> Python, Django, Scipy</p></li>
                                 <li><p> Java, JavaFX</p></li>
-                                <li><p> Javascript, NodeJS, ExpressJS, ReactJS</p></li>
+                                <li><p> JavaScript, NodeJS, ExpressJS, ReactJS</p></li>
                                 <li><p> HTML/CSS, PHP</p></li>
                                 <li><p> MySQL, SQLite, MongoDB</p></li>
                             </ul>
