--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,12 @@
                     <div class="list-wrapper" id="home-list-wrapper">
                         <div class="list-wrapper-element" id="about">
                             <h2>About</h2>
-                            <p>Work in progress...</p>
-                        </div>
-                        <div class="list-wrapper-element" id="skills">
-                            <h2>Skills</h2>
+                            <p>Hi, I'm Ore. Welcome to my portfolio.</p>
+                            <p>I am currently an undergraduate, in the final year of my Computer Science BSc, and will be starting an MSc in Software Engineering in September 2023. 
+                                
+                                When I'm not at my computer, I enjoy playing drums and bass guitar, and keeping fit through Thai kickboxing.</p>
+                            <br>
+                            <h2 id="skills">Skills</h2>
                             <ul>
                                 <li><p> Python, Django, Scipy</p></li>
                                 <li><p> Java, JavaFX</p></li>
@@ -42,6 +44,9 @@
                                 <li><p> HTML/CSS, PHP</p></li>
                                 <li><p> MySQL, SQLite, MongoDB</p></li>
                             </ul>
+                        <!-- </div>
+                        <div class="list-wrapper-element" id="skills"> -->
+                            
                         </div>
                         <div class="list-wrapper-element" id="contact">
                             <h2>Contact</h2>
@@ -62,19 +67,40 @@
                         <ul>
                             <li><p><a href="#project1" id="project1Link" class="active">Project 1</a></p></li>
                             <li><p><a href="#project2" id="project2Link" class="inactive">Project 2</a></p></li>
-                            <li><p><a href="#project3" id="project3Link" class="inactive">Project 3</a></p></li>
+                            <!-- <li><p><a href="#project3" id="project3Link" class="inactive">Project 3</a></p></li> -->
                         </ul>
                     </div>
                     <div class="list-wrapper" id="project-list-wrapper">
                         <div class="list-wrapper-element" id="project1">
-                            <h2>Keystroke Analyser</h2>
+                            <h2>Keystroke Authentication</h2>
+                            <p>HTML/CSS, JavaScript, Python, SQL, AWS</p>
+                            <p>Website developed for research into the use of keystroke biometrics for user authentication with ver 30,000 keystrokes collected and analysed. 
+                                Below is a heatmap summary of a selection of user results,
+                                and a prediction table showing the reusls from the multi-layer perceptron algorithm, one of the various machine learning algorithms used.</p>
+                            <p>Code and documentation for this project can be found <a href="https://github.com/orebenson/keystroke_authentication">here</a></p>
+                            <br>
+                            <!-- <img src="experiment.PNG" alt="Experiment Snippet" width="40%"> -->
+                            <img src="example_grid.png" alt="mlp results">
+                            <img src="example_heatmap.png" alt="heatmap">
                         </div>
                         <div class="list-wrapper-element" id="project2">
-                            <h2>[ Project 2 ]</h2>
-                        </div>
+                            <h2>Payment Application</h2>
+                            <p>HTML/CSS, Django framework</p>
+                            <p>Application simulating bank transfers between users, including a currency conversion API. 
+                                Allowing users to send and receive payments and payments requests, view their balance, and choose between currencies.
+                                The application contains a currency conversion API route, enabling seamless transfers between accounts of different currencies.
+                                The user requests page and an example of the API are shown below</p>
+                            <p>Code for this project can be found <a href="https://github.com/orebenson/payment_application">here</a></p>
+                            <br>
+                            <img src="requests.png" alt="requests" width="50%">
+                            <img src="example_api.png" alt="api example">
+                            <br>
+                        <!-- </div>
                         <div class="list-wrapper-element" id="project3">
                             <h2>[ Project 3 ]</h2>
-                        </div>
+                            <p>[ demo gif ]</p>
+                            <p>[ description ]</p>
+                        </div> -->
                     </div>
                 </div>
             </div>
