--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
                 <p>
                     <ul>
                         <li>
-                            <a href="#home" id="homeLink" class="active">Home</a>
+                            <a href="#home" id="homeLink" class="active">home</a>
                         </li>
                         <li>
-                            <a href="#about" id="aboutLink" class="inactive">About</a>
+                            <a href="#about" id="aboutLink" class="inactive">about</a>
                         </li>
                         <li>
-                            <a href="#projects" id="projectsLink" class="inactive">Projects</a>
+                            <a href="#projects" id="projectsLink" class="inactive">projects</a>
                         </li>
                     </ul>
                 </p>
@@ -32,6 +32,7 @@
                     <h1>Ore Benson</h1>
                     <h3>Computer Science BSc</h3>
                     <h3>Aspiring Software Engineer</h3>
+                    <p>Computer science student with a foundation in programming, maths, and logic, and a thorough understanding of the software development lifecycle, honed through various projects and internships</p>
                 </div>
                 <div class="list-wrapper-element" id="about">
                     <div id="skills">
